# OpenGMK

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  DUMMY  LICENCE.md  README.md  README.org  Xargo.toml  appveyor.yml  build.rs  rust-toolchain.toml  todo.sh
.github/workflows/: rust.yml  rust_debug.yml
appveyor/: before-deploy.ps1
assets/logo/: origins.7z
ci/: before-deploy.ps1
control-panel/: Cargo.toml  build.rs  font.rs  main.rs  panel.rs  render.rs  window.rs
control-panel/render/: opengl.rs
control-panel/render/glsl/: vertex.glsl
control-panel/render/opengl/: wgl.rs
dll-bridge/: .gitignore  Cargo.toml
dll-bridge/src/: main.rs
dll-helper/: .gitignore  Cargo.toml
dll-helper/.cargo/: config
dll-helper/src/: main.rs
dll-macros/: Cargo.toml
dll-macros/src/: lib.rs
gm8decompiler/: Cargo.toml  README.md  build.rs
gm8decompiler/src/: collision.rs  deobfuscate.rs  gmk.rs  main.rs  mappings.rs  zlib.rs
gm8emulator/: Cargo.toml  build.rs
gm8emulator-wow64/: Cargo.toml  rust-toolchain.toml
gm8emulator-wow64/src/: main.rs
gm8emulator/data/: gm8emulator.exe.manifest
gm8emulator/ffi/cimgui-sys/: .rustfmt.toml  Cargo.toml  bindgen.h  bindgen.sh  bindings.c  build.rs
gm8emulator/ffi/cimgui-sys/src/: bindgen.rs  lib.rs
gm8emulator/src/: action.rs  asset.rs  game.rs  gml.rs  handleman.rs  imgui.rs  imgui_key_utils.rs  imgui_utils.rs  input.rs  inputv2.rs  instance.rs  instancelist.rs  main.rs  math.rs  render.rs  tile.rs  types.rs  util.rs
gm8emulator/src/asset/: background.rs  font.rs  object.rs  path.rs  room.rs  script.rs  sound.rs  sprite.rs  timeline.rs  trigger.rs
gm8emulator/src/game/: audio.rs  draw.rs  events.rs  external.rs  external2.rs  gm_save.rs  includedfile.rs  model.rs  movement.rs  particle.rs  pathfinding.rs  platform.rs  recording.rs  replay.rs  savestate.rs  string.rs  surface.rs  tas.rs  transition.rs  view.rs
gm8emulator/src/game/audio/: mixer.rs  mp3.rs
gm8emulator/src/game/external2/: dll.rs  state.rs  win32.rs  wow64.rs
gm8emulator/src/game/platform/: windows.rs
gm8emulator/src/game/recording/: console.rs  control_window.rs  game_window.rs  input_edit.rs  input_window.rs  instance_report.rs  keybinds.rs  macro_window.rs  menu_bar.rs  popup_dialog.rs  savestate_window.rs  set_mouse_dialog.rs  window.rs
gm8emulator/src/game/recording/popup_dialog/: string_input.rs
gm8emulator/src/game/tas/: savestate.rs
gm8emulator/src/gml/: compiler.rs  context.rs  datetime.rs  ds.rs  file.rs  kernel.rs  mappings.rs  network.rs  rand.rs  runtime.rs  string.rs  value.rs
gm8emulator/src/gml/compiler/: ast.rs  lexer.rs  mappings.rs  token.rs
gm8emulator/src/render/: atlas.rs  opengl.rs
gm8emulator/src/render/glsl/: fragment.glsl  vertex.glsl
gm8emulator/src/render/opengl/: glx.rs  wgl.rs  wgl_ffi.rs
gm8exe/: Cargo.toml  README.md
gm8exe/src/: asset.rs  colour.rs  def.rs  gamedata.rs  lib.rs  reader.rs  rsrc.rs  settings.rs  upx.rs
gm8exe/src/asset/: background.rs  code_action.rs  constant.rs  extension.rs  font.rs  included_file.rs  includedfile.rs  object.rs  path.rs  room.rs  script.rs  sound.rs  sprite.rs  timeline.rs  trigger.rs
gm8exe/src/asset/etc/: codeaction.rs
gm8exe/src/gamedata/: antidec.rs  gm80.rs  gm81.rs
gm8x/: .travis.yml
gm8x/src/asset/: path.rs
gmio/: Cargo.toml  build.rs
gmio/src/: atlas.rs  input.rs  lib.rs  render.rs  window.rs
gmio/src/render/: opengl.rs
gmio/src/render/glsl/: fragment.glsl  vertex.glsl
gmio/src/render/opengl/: wgl.rs
gmio/src/window/: win32.rs  xorg.rs
gmk-parser/: Cargo.toml
gmk-parser/src/: asset.rs  format.rs  gmk.rs  help_dialog.rs  lib.rs  rsrc.rs  settings.rs
gmk-parser/src/asset/: action.rs  background.rs  constant.rs  event.rs  extension.rs  font.rs  frame.rs  included_file.rs  object.rs  path.rs  room.rs  script.rs  sound.rs  sprite.rs  timeline.rs  trigger.rs
gmk-parser/src/format/: gm80.rs  gm81.rs  upx.rs
gml-parser/: Cargo.toml
gml-parser/src/: ast.rs  lexer.rs  lib.rs  token.rs
hitbox/: Cargo.toml
hitbox/src/: main.rs
incl/: default  usage
lib/gl/: Cargo.toml  build.rs
lib/gl/src/: lib.rs
lib/gm8x/: Cargo.toml  README.md
lib/gm8x/src/: color.rs  colour.rs  lib.rs  reader.rs
lib/gm8x/src/asset/: etc.rs  extension.rs  font.rs  includedfile.rs  object.rs  room.rs  script.rs  sprite.rs  timeline.rs
lib/gm8x/src/asset/etc/: codeaction.rs
shared/: Cargo.toml
shared-bk/src/: input.rs
shared/src/: dll.rs  input.rs  lib.rs  message.rs
shared/src/dll/: win32.rs
src/: action.rs  asset.rs  assets.rs  atlas.rs  background.rs  byteio.rs  bytes.rs  collision.rs  color.rs  def.rs  deobfuscate.rs  game.rs  gl.rs  gmk.rs  gml.rs  input.rs  instance.rs  instancelist.rs  lexer.rs  lib.rs  main.rs  mappings.rs  math.rs  reader.rs  render.rs  replay.rs  tile.rs  token.rs  types.rs  util.rs  view.rs  xmath.rs  zlib.rs
src/asset/: background.rs  constant.rs  extension.rs  font.rs  includedfile.rs  object.rs  path.rs  room.rs  script.rs  sound.rs  sprite.rs  timeline.rs  trigger.rs
src/asset/etc/: codeaction.rs
src/assets/: background.rs  constant.rs  font.rs  object.rs  path.rs  room.rs  script.rs  sound.rs  sprite.rs  timeline.rs  trigger.rs
src/game/: background.rs  draw.rs  events.rs  movement.rs  parser.rs  particle.rs  string.rs  tas.rs  view.rs  window.rs
src/game/tas/: message.rs  savestate.rs
src/game/window/: win32.rs  xorg.rs
src/gml/: ast.rs  compiler.rs  context.rs  dnd.rs  ds.rs  file.rs  kernel.rs  lexer.rs  rand.rs  runtime.rs  token.rs  value.rs
src/gml/compiler/: ast.rs  lexer.rs  mappings.rs  token.rs
src/gml/runtime/: kernel.rs
src/render/: opengl.rs
src/render/glsl/: fragment.glsl  vertex.glsl
src/render/opengl/: wgl.rs  win32.rs  xorg.rs
src1/: .travis.yml  Cargo.toml  todo.sh
src1/src/: gml.rs  main.rs  unused.rs  xmath.rs
src1/src/assets/: background.rs  room.rs  script.rs  sprite.rs  timeline.rs
src1/src/game/: parser.rs
src1/src/gml/: dnd.rs
