[package]
name = "gm8emulator"
version = "0.1.0"
authors = ["Adamcake", "viri"]
license = "GPL-2.0-only"
edition = "2018"

[build-dependencies]
gl_generator = "0.14.0"

[dependencies]
cfg-if = "0.1"
getopts = "0.2.21"
gm8exe = { git = "https://github.com/OpenGM8/GM8Decompiler.git" }
indexmap = "1.3.2"
memoffset = "0.5.3"
png = "0.15.2"
rand = "0.7.2" # for seeding, not generating
rect_packer = "0.2.1"
winit = "0.22"

[target.'cfg(target_os = "windows")'.dependencies.winapi]
version = "0.3"
features = ["libloaderapi", "wingdi", "winuser"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
