[package]
name = "gm8decompiler"
version = "2.0.6"
authors = ["Adamcake", "Floogle", "viri"]
license = "GPL-2.0-only"
edition = "2018"

[build-dependencies]
time = { version = "0.2", features = ["std"], default-features = false }

[dependencies]
byteorder = "1"
flate2 = { git = "https://github.com/rust-lang/flate2-rs.git", features = ["zlib-ng-compat"], default-features = false }
getopts = "0.2.21"
gm8exe = { path = "gm8exe" }
rayon = "1.2"

[profile.release]
codegen-units = 1
lto = true

[workspace]
members = ["gm8exe"]
