[package]
name = "control-panel"
version = "0.1.0"
authors = ["The OpenGMK Project Developers"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2.21"
gmio = { path = "../gmio" }
rusttype = "0.9"
shared = { path = "../shared" }

[[bin]]
name = "control-panel"
path = "main.rs"
