[package]
name = "control-panel"
version = "0.1.0"
authors = ["The OpenGMK Project Developers"]
edition = "2018"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
getopts = "0.2.21"
gmio = { path = "../gmio" }
rusttype = "0.9"
shared = { path = "../shared" }

[[bin]]
name = "control-panel"
path = "main.rs"
