[package]
name = "gm8decompiler"
version = "2.1.1"
authors = ["The OpenGMK Project Developers"]
license = "GPL-2.0-only"
edition = "2018"

[build-dependencies]
# TODO: change to version = "0.3" when they finally publish 0.3
time = { git = "https://github.com/time-rs/time/", features = ["std"], default-features = false }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
byteorder = "1"
flate2 = { version = "1.0", features = ["zlib-ng-compat"], default-features = false }
getopts = "0.2.21"
gm8exe = { path = "../gm8exe" }
gml-parser = { path = "../gml-parser" }
rayon = "1.2"
