[package]
name = "gm8emulator"
version = "0.1.0"
authors = ["The OpenGMK Project Developers"]
license = "GPL-2.0-only"
edition = "2018"
default-run = "gm8emulator"

[build-dependencies]
gl_generator = "0.14.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
bincode = "1.2"
cfg-if = "0.1"
chrono = { version = "0.4", default-features = false }
encoding_rs = "0.8.23"
getopts = "0.2.21"
getrandom = "0.2"
glob = "0.3.0"
gm8exe = { path = "../gm8exe" }
gmio = { path = "../gmio" }
gml-parser = { path = "../gml-parser", features = ["runner-serde-derives"] }
hex = "0.4.2"
image = "0.23.6"
indexmap = { version = "1.3.2", features = ["serde-1"] }
memoffset = "0.5.3"
phf = { git = "https://github.com/skyfloogle/rust-phf.git", branch = "various-forks", features = ["macros"] }
rect_packer = "0.2.1"
rust-ini = "0.17"
serde = { version = "1.0", features = ["derive", "rc"] }
shared = { path = "../shared" }

[target.'cfg(target_os = "linux")'.dependencies.x11]
version = "2.18.2"
features = ["xlib"]
