[package]
name = "gm8emulator"
version = "0.2.0"
authors = ["The OpenGMK Project Developers"]
license = "GPL-2.0-only"
edition = "2021"
rust-version = "1.59"
default-run = "gm8emulator"

[build-dependencies]
gl_generator = "0.14.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
bincode = "1.2"
byteorder = "1"
cimgui-sys = { path = "ffi/cimgui-sys" }
encoding_rs = "0.8.23"
getopts = "0.2.21"
getrandom = "0.2"
glob = "0.3.0"
gm8exe = { path = "../gm8exe" }
gml-parser = { path = "../gml-parser", features = ["runner-serde-derives"] }
hex = "0.4.2"
image = "0.23.6"
indexmap = { version = "1.3.2", features = ["serde-1"] }
lzzzz = "0.8.0"
memoffset = "0.6.5"
phf = { version = "0.9.0", features = ["macros"] }
ramen = { git = "https://github.com/viriuwu/ramen", features = ["input", "parking-lot"] }
rect_packer = "0.2.1"
rmp3 = { version = "0.3", features = ["float"] }
rust-ini = "0.17"
serde = { version = "1.0", features = ["derive", "rc"] }
time = { version = "0.3", features = ["local-offset", "macros"] }
udon = { git = "https://github.com/adamcake/udon", features = ["serde-derives", "wav"] }
clipboard = "0.5.0"

[target.'cfg(all(target_os = "windows"))'.dependencies]
crc32fast = "1.2"
libffi = "1.0.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
