[package]
name = "gm8emulator"
version = "0.2.0"
authors = ["The OpenGMK Project Developers"]
license = "GPL-2.0-only"
edition = "2021"
rust-version = "1.77"
default-run = "gm8emulator"

[build-dependencies]
gl_generator = "0.14"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5"
clipboard = "0.5"
encoding_rs = "0.8"
getopts = "0.2"
getrandom = "0.2"  # 0.3.4
glob = "0.3"
gm8exe = { path = "../gm8exe" }
gml-parser = { path = "../gml-parser", features = ["runner-serde-derives"] }
hex = "0.4"
image = { version = "0.25.6", features = ["bmp", "gif", "ico", "jpeg", "png", "tga", "tiff"], default-features = false }
imgui = { version = "0.12", features = ["tables-api"] }
indexmap = { version = "2.5.0", features = ["serde"] }  # 2.11.4
lzzzz = "2.0"
phf = { version = "0.13", features = ["macros"] }
ramen = { git = "https://github.com/viriuwu/ramen", features = ["input", "parking-lot"] }
rect_packer = "0.2"
rmp3 = { version = "0.3", features = ["float"] }
rust-ini = "0.21"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_with = { version = "3.16.1", features = ["alloc", "macros"], default-features = false }
time = { version = "0.3.41", features = ["local-offset", "macros"] }
udon = { git = "https://github.com/Adamcake/udon", features = ["serde-derives", "wav"] }

[target.'cfg(all(target_os = "windows"))'.dependencies]
crc32fast = "1.5"
libffi = "3.1.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
