[package]
name = "gmk-parser"
version = "0.1.0"
authors = ["The OpenGMK Project Developers"]
license = "GPL-2.0-only"
edition = "2021"
rust-version = "1.58"

[features]
nightly-docs = []
rayon = ["rayon-rs"]

[dependencies]
byteorder = "1"
flate2 = "1.0"
log = "0.4"
rayon-rs = { package = "rayon", version = "1.5", optional = true }
time = { version = "0.3", features = ["macros"] }

[package.metadata.docs.rs]
features = ["nightly-docs"]
targets = ["x86_64-unknown-linux-gnu"] # don't build like 6 targets
